kubernetes/apps/portfolio/production/admin.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-admin
  labels:
    app: portfolio-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-admin
  template:
    metadata:
      labels:
        app: portfolio-admin
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-admin:1.0.7 # {"$imagepolicy": "default:portfolio-admin"}
          ports:
            - containerPort: 4400
