kubernetes/apps/portfolio/production/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
  labels:
    app: portfolio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-app
  template:
    metadata:
      labels:
        app: portfolio-app
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-app:1.0.2 # {"$imagepolicy": "default:portfolio-app"}
          ports:
            - containerPort: 4400
