kubernetes/apps/portfolio/production/back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
  labels:
    app: portfolio-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-backend:1.0.19 # {"$imagepolicy": "default:portfolio-backend"}
          ports:
            - containerPort: 8080
