kubernetes/apps/portfolio/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.piny940.com
      secretName: cluster-tls
    - hosts:
        - portfolio-backend.piny940.com
      secretName: cluster-tls
    - hosts:
        - portfolio-admin.piny940.com
      secretName: cluster-tls
  rules:
    - host: www.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app
                port:
                  number: 4400
    - host: portfolio-backend.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-backend
                port:
                  number: 8080
    - host: portfolio-admin.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-admin
                port:
                  number: 4400
